--- a/.github/workflows/deploy_notifyemailapp.yml
+++ b/.github/workflows/deploy_notifyemailapp.yml
@@ -1,39 +1,21 @@
-name: Deploy Python Azure Function - notifyemailapp
+- name: Checkout repo
+  uses: actions/checkout@v4
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
+- name: Setup Python
+  uses: actions/setup-python@v5
+  with:
+    python-version: '3.11'
 
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
+- name: Install dependencies
+  run: pip install -r BlobDeleteEvent/requirements.txt
 
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+- name: 'Login via Azure'
+  uses: azure/login@v2
+  with:
+    creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install -r BlobDeleteEvent/requirements.txt
-
-      - name: 'Login via Azure CLI'
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-
-      - name: Deploy to Azure Function
-        uses: Azure/functions-action@v1
-        with:
-          app-name: 'notifyemailapp'
-          package: '.'
+- name: Deploy to Azure Function
+  uses: Azure/functions-action@v1
+  with:
+    app-name: 'notifyemailapp'
+    package: '.'
