--- a/.github/workflows/deploy_notifyemailapp.yml
+++ b/.github/workflows/deploy_notifyemailapp.yml
@@ -1,21 +1,36 @@
-- name: Checkout repo
-  uses: actions/checkout@v4
+name: Deploy Python Azure Function - notifyemailapp
 
-- name: Setup Python
-  uses: actions/setup-python@v5
-  with:
-    python-version: '3.11'
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
 
-- name: Install dependencies
-  run: pip install -r BlobDeleteEvent/requirements.txt
+jobs:
+  build-and-deploy:
+    runs-on: ubuntu-latest
 
-- name: 'Login via Azure'
-  uses: azure/login@v2
-  with:
-    creds: ${{ secrets.AZURE_CREDENTIALS }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-- name: Deploy to Azure Function
-  uses: Azure/functions-action@v1
-  with:
-    app-name: 'notifyemailapp'
-    package: '.'
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          pip install --upgrade pip
+          pip install -r BlobDeleteEvent/requirements.txt
+
+      - name: Login to Azure
+        uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Deploy to Azure Function
+        uses: Azure/functions-action@v1
+        with:
+          app-name: 'notifyemailapp'
+          package: '.'
